# robocop

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/: .dockerignore  Dockerfile  README.md
src/arduino_code/src/: arduino_uno_a.ino  arduino_uno_b.ino
src/robot_bridge/: package.xml  setup.cfg  setup.py
src/robot_bridge/robot_bridge/: robot_bridge.py
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/config/: bridge.yaml
src/robot_bringup/launch/: bringup.launch.py
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: MotorArrayCmd.msg  MotorArraystate.msg
src/robot_msgs/srv/: SpinSequence.srv
