<?xml version="1.0"?>
<package format="3">
  <name>robot_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge node in Python</description>

  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_msgs</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend> <!-- needed if you use your custom msgs -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
