<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Bringup and launch files for the robot.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- What this package needs at runtime -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_bridge</exec_depend>
  <!-- If your launch files also use robot_msgs directly, add: -->
  <!-- <exec_depend>robot_msgs</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
